# blog

./: .buildinfo  LICENSE  README.md  callable_contravariant_arguments.html  genindex.html  intro.html  markdown-notebooks.html  notebooks.html  objects.inv  publish.sh  pypi-multi-repo.html  pypi_multi_repo.html  pyproject.toml  pytest-fastapi-multiple-upload.html  pytest_fastapi_multiple_upload.html  python-logs.html  search.html  searchindex.js
.github/workflows/: build-blog-direct.yml  build-blog.yml  build-book.yml
_sources/: callable_contravariant_arguments.ipynb  intro.md  pypi-multi-repo.md  pytest-fastapi-multiple-upload.ipynb  pytest_fastapi_multiple_upload.ipynb
blog/: _config.yml  _toc.yml  basic_chat.ipynb  opensearch_export_import.ipynb  tests-ollama-query.ipynb  tokenizer_visualization.ipynb
blog/_build/.doctrees/: callable_contravariant_arguments.doctree  environment.pickle  intro.doctree  markdown.doctree  pypi-multi-repo.doctree  pypi_multi_repo.doctree  pytest_fastapi_multiple_upload.doctree
blog/_build/html/: callable_contravariant_arguments.html  genindex.html  markdown.html  python-logs.html  search.html
blog/_build/jupyter_execute/: markdown-notebooks.ipynb  python-logs.ipynb
firstbook/: _config.yml  _toc.yml  callable_contravariant_arguments.ipynb  intro.md  mock.ipynb  python-logs.ipynb
firstbook/_build/.doctrees/: callable_contravariant_arguments.doctree  environment.pickle  intro.doctree  markdown-notebooks.doctree  notebooks.doctree  pypi-multi-repo.doctree  (+4 more)
work_in_progress/: opensearch_export_import.ipynb  python_logs.ipynb
(+21 files in other folders)
