[project]
name = "blog"
version = "0.1.0"
description = "Collection of Jupyter notebook (mainly) about data science"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-book (>=1.0.3,<2.0.0)",
    "ghp-import (>=2.1.0,<3.0.0)",

    "pydata-sphinx-theme (==0.15.3)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

